--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@metamask/detect-provider": "^2.0.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "ethers": "^5.7.2",
+    "metamask": "^0.0.1-security",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
