--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,12 @@
     "@metamask/detect-provider": "^2.0.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "metamask": "^0.0.1-security",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "web3modal": "^1.9.12",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
